# esp-hal-mdns

./: .gitignore  Cargo.toml  README.md  rundns.sh  testzones.toml
esp-test/: Cargo.toml
esp-test/src/: main.rs
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs  main.rs
