[package]
name = "esp-hal-mdns"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Simple mdns lookup stack for esp-hal"
repository = "https://github.com/filipton/esp-hal-mdns"

[lib]

[dependencies]
dns-protocol = { version = "0.1.2", default-features = false }
heapless = { version = "0.9.1", default-features = false }
log = { version = "0.4.27", default-features = false }
#socket2 = { version = "0.5.7", features = ["all"] }

[features]
default = []
