[package]
name = "esp-test"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32s3" ] }
esp-println = { version = "0.10.0", default-features = false, features = ["esp32s3", "critical-section", "colors", "log", "jtag-serial"] }
log = { version = "0.4.22" }
esp-wifi = { version = "0.7.0", features = ["esp32s3", "phy-enable-usb", "utils", "wifi", "wifi-default"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
esp-hal-mdns = { path = "../" }
dns-protocol = { version = "0.1.2", default-features = false }

[build-dependencies]
dotenvy = "0.15.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
