[package]
name = "examples-mdns"
version = "0.1.0"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = ["esp32s3", "async"] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
log = { version = "0.4.22" }
esp-wifi = { version = "0.7.1", features = ["esp32s3", "phy-enable-usb", "utils", "wifi", "async", "embassy-net", "wifi-default"] }
heapless = { version = "0.8.0", default-features = false }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "igmp", "medium-ip"] }
embassy-executor = { version = "0.5.0", features = ["arch-riscv32", "integrated-timers", "task-arena-size-81920"] }
embassy-time = "0.3.1"
esp-hal-embassy = { version = "0.2.0", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = [] }
embedded-io-async = "0.6.1"

esp-hal-mdns = { path = "../" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
dotenvy = "0.15.7"
